    + Don't try to be smart and detect ancient kernels, that breaks.
      Closes: #521296
  * debian/rules.modules:
    + Install hdaps.ko in $(KVERS)/updates/, not $(KVERS)/kernel/updates/.
      Closes: #522113
  * debian/rules:
    + Add README.Debian to tp-smapi.tar.bz2, so it will show up in the
      built -modules package.
      Closes: #498207

 -- Evgeni Golov <sargentd@die-welt.net>  Sun, 05 Apr 2009 00:18:42 +0200

tp-smapi (0.40-2) unstable; urgency=low

  * Upload to unstable.
  * debian/control:
    + Set DM-Upload-Allowed: yes.
    + Add Vcs-* headers.

 -- Evgeni Golov <sargentd@die-welt.net>  Sun, 08 Mar 2009 12:06:01 +0100

tp-smapi (0.40-1) experimental; urgency=low

  * New upstream release.
  * Refresh debian/patches/99_Makefile-for-Debian.dpatch.

 -- Evgeni Golov <sargentd@die-welt.net>  Tue, 16 Dec 2008 09:48:28 +0100

tp-smapi (0.39-1) experimental; urgency=low

  * New upstream release.
  * Drop 02_fix_semaphore_h_include.dpatch, included upstream.
  * Refresh 01_include-thinkpad_ec.h-directly.dpatch.
  * Bump Standards-Version to 3.8.0.
  * Add README.source.
  * Move bzip2 from Build-Depends to Build-Depends-Indep.

 -- Evgeni Golov <sargentd@die-welt.net>  Tue, 30 Sep 2008 19:38:49 +0200

tp-smapi (0.37-3) unstable; urgency=low

  * New patch 02_fix_semaphore_h_include.dpatch
    + Fixes the include of semaphore.h in newer kernels (Closes: #497990).

 -- Evgeni Golov <sargentd@die-welt.net>  Mon, 08 Sep 2008 15:19:45 +0200

tp-smapi (0.37-2) unstable; urgency=low

  * Update 99_Makefile-for-Debian.dpatch to not set CFLAGS (Closes: #476360)

 -- Evgeni Golov <sargentd@die-welt.net>  Wed, 16 Apr 2008 12:55:41 +0200

tp-smapi (0.37-1) unstable; urgency=low

  * New Upstream Version
  * Drop 02_fix_2.6.25.dpatch, was merged upstream

 -- Evgeni Golov <sargentd@die-welt.net>  Sat, 29 Mar 2008 09:54:31 +0100

tp-smapi (0.36-2) unstable; urgency=low

  * Update 99_Makefile-for-Debian.dpatch