@@ -19,8 +19,10 @@ tp-smapi (0.40-3) unstable; urgency=low
     + Add README.Debian to tp-smapi.tar.bz2, so it will show up in the
       built -modules package.
       Closes: #498207
+  * debian/control{,modules.in}:
+    + Update descriptions.
 
- -- Evgeni Golov <sargentd@die-welt.net>  Sun, 05 Apr 2009 00:18:42 +0200
+ -- Evgeni Golov <sargentd@die-welt.net>  Sun, 05 Apr 2009 00:28:12 +0200
 
 tp-smapi (0.40-2) unstable; urgency=low
 
